more fixes with the image alignment

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -29,6 +29,11 @@ body, html {
     background-color:#40c4ff;
 }
 
+.tvstatsapp{
+    height: 25%;
+    
+}
+
 /* The hero image */
 .hero-image {
     /* The image used */
